# api/swagger.yml
@@ -26,28 +26,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Alumno'
-    post:
-      operationId: "api.alumnos.crear"
-      tags:
-        - "Alumnos"
-      summary: "Alta de un domino de la materia"
-      description: "Crea un nuevo domino y lo agrega a la lista de domino custom"
-      requestBody:
-        required: true
-        x-body-name: 'alumno'
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/InputPost'
-      responses:
-        201:
-          description: "Se creo el domino correctamente"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Alumno'
-        400:
-          description: "domino duplicado"
+
     put:
       operationId: "api.alumnos.put"
       tags:
@@ -73,33 +52,6 @@ paths:
 
 
   /alumnos/{dominio}:
-
-    get:
-      operationId: "api.alumnos.obtener_uno"
-      tags:
-        - "Alumnos"
-      summary: "Dominio"
-      description: "Obtiene un dominio"
-      parameters:
-        - in: path
-          name: dominio
-          required: true
-          schema:
-            type: string
-          description: El domain a obtener
-      responses:
-        200:
-          description: "Operación de lectura exitosa"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Alumno'
-        404:
-          description: "Operación de lectura exitosa"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
 
 
     delete:
@@ -146,6 +98,57 @@ paths:
                 $ref: '#/components/schemas/Alumno'
         400:
           description: "Domain duplicado"
+    post:
+      operationId: "api.custom-domain.crear"
+      tags:
+        - "custom-domain"
+      summary: "Alta de un domino de la materia"
+      description: "Crea un nuevo domino y lo agrega a la lista de domino custom"
+      requestBody:
+        required: true
+        x-body-name: 'alumno'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InputPost'
+      responses:
+        201:
+          description: "Se creo el domino correctamente"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Alumno'
+        400:
+          description: "domino duplicado"
+
+  /domains/{domain}:
+
+    get:
+      operationId: "api.domains.obtener_uno"
+      tags:
+        - "domains"
+      summary: "Dominio"
+      description: "Obtiene un dominio"
+      parameters:
+        - in: path
+          name: domain
+          required: true
+          schema:
+            type: string
+          description: El domain a obtener
+      responses:
+        200:
+          description: "Operación de lectura exitosa"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Alumno'
+        404:
+          description: "Operación de lectura exitosa"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 
 
